feat: add stats for daily tasks in branch
